plugins {
    id 'java'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.ganev.double-cache'
version = '1.2'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

jar {
    archiveBaseName = 'double-cache'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

spotless {
    java {
        googleJavaFormat()
        target 'src/**/*.java'
    }
}

test {
    useJUnitPlatform()
}